# algorithms

./: CMakeLists.txt  LICENSE  README.md
src/: binarysearching.hh  main.cc  merging.hh  set.hh  sorting.hh  sortingalgorithms.hh  utils.hh
